--- a/layouts/404.html
+++ b/layouts/404.html
@@ -3,7 +3,7 @@
 <html>
 <head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
   <title>Page not found</title>
-  <link rel="icon" href="./images/micky.png">
+  <link rel="icon" href="/images/micky.png">
 </head>
 
 <body>
